# Zrata-X

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 48f339bda6f1_add_enhanced_fields.py  8916343aefbe_initial_schema.py  96e460e6067e_add_enhanced_fields.py  migration_add_enhanced_fields.py  
backend/app/: config.py  database.py  main.py
backend/app/models/: asset_data.py  market_signal.py  user.py
backend/app/routers/: auth.py  market_data.py  portfolio.py  recommendations.py
backend/app/scripts/: init_seed_data.py  run_all_scrapers.py  run_rss_and_signals.py
backend/app/seed_data/: __init__.py  banks_and_fds.py  etfs.py  macro_indicators.py
backend/app/services/: __init__.py
backend/app/services/ai_engine/: __init__.py  openrouter_client.py  prompts.py  recommendation_pipeline.py  signal_processor.py
backend/app/services/data_scrapers/: __init__.py  etf_data_service.py  fd_scraper.py  mf_data_service.py  news_scraper.py  rss_news_ingester.py
backend/app/services/logging/: log.py
backend/app/services/market_data/: __init__.py  gold_price_service.py  macro_data_service.py  market_data_aggregator.py  news_service.py
backend/app/services/memory/: __init__.py  supermemory_service.py
backend/app/tasks/: __init__.py  celery_app.py  data_refresh_tasks.py
backend/app/tests/: test_pipeline.py
backend/migrations/: env.py
backend/migrations/versions/: b6826b7452aa_add_market_signals_table.py
(+63 files in other folders)
